style(projectCarousel): fix alignment issues

--- a/app/portfolio/components/project-hub/carousel/projectCarousel.scss
+++ b/app/portfolio/components/project-hub/carousel/projectCarousel.scss
@@ -133,13 +133,15 @@
           cursor: grabbing;
         }
         & picture {
+          display: flex;
+          align-items: flex-end;
           height: inherit;
           max-height: inherit;
         }
         & picture img {
           display: block;
           width: 100%;
-          height: 100%;
+          height: auto;
           object-fit: contain;
           filter: brightness(92%);
         }
